# chart-solar

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  BUSINESS_PLAN.md  CLAUDE.md  Dockerfile  Dockerfile.worker  LEGAL_CONSIDERATIONS.md  Makefile  PRODUCT_PLAN.md  README.md  VISION.md  docker-compose.yml  pyproject.toml
.beads/: config.yaml  metadata.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 8b3e7a1c4d20_audits_installer_quotes_pii_vault.py  9a1b2c3d4e5f_users_fk_audits_pii_vault.py  a1f2c4d6b8e0_tmy_cache.py  a8b2c4d6e9f1_users_magic_links_sessions.py  b3c2d1e8f9a4_user_entitlements_tier_check.py  b7e1c8d4a905_user_entitlements_user_id_uuid_fk.py  c4d2e1a8b9f3_users_aggregation_opt_out.py  c6cb527d3505_baseline.py  d4f1a2c8b9e3_idempotency_keys_and_stripe_events.py  e2c5b9a7d3f4_index_installer_quotes_audit_id.py  f5a3b7c2d1e8_user_entitlements.py
backend/: README.md  config.py  database.py  main.py
backend/api/: audits.py  entitlements.py  forecast.py  health.py  irradiance.py  me.py  stripe_webhook.py
backend/api/auth/: __init__.py  magic_link.py  session_middleware.py
backend/db/: __init__.py  audit_models.py  auth_models.py  base.py  entitlement_models.py  models.py  tmy_cache.py
backend/domain/: __init__.py  calendar.py  events.py  hold.py  tariff.py  tmy.py
backend/engine/: inputs.py  pipeline.py  registry.py  snapshot.py  types.py
backend/engine/finance/: __init__.py  _solver.py  amortization.py  cashflow.py  opportunity_cost.py  sale.py
backend/engine/integration/: __init__.py  nbt.py  seg.py
backend/engine/steps/: __init__.py  _calendar.py  battery_dispatch.py  clipping.py  consumption.py  dc_production.py  degradation.py  export_credit.py  finance.py  irradiance.py  monte_carlo.py  snow.py  soiling.py  tariff.py  temperature.py  tornado.py
backend/entitlements/: features.py  guards.py
backend/extraction/: __init__.py  critical_fields.py  heuristics.py  schemas.py
backend/infra/: eventbus.py  http.py  idempotency.py  logging.py  middleware.py  rate_limit.py  retry.py  util.py
backend/providers/: __init__.py  _seed_common.py
backend/providers/email/: __init__.py  resend.py
backend/providers/fake/: __init__.py  email.py  geocoding.py  incentive.py  irradiance.py  monitoring.py  storage.py  tariff.py
backend/providers/geocoding/: __init__.py
backend/providers/hold_distribution/: __init__.py  national_default.py
backend/providers/incentive/: __init__.py  state_seed.py
backend/providers/irradiance/: __init__.py  _aggregation.py  era5_land.py  nsrdb.py  nsrdb_1985.py  openmeteo.py  pvgis.py
backend/providers/monitoring/: __init__.py
backend/providers/storage/: __init__.py  s3.py
backend/providers/tariff/: __init__.py  urdb.py  urdb_api.py
backend/services/: __init__.py  audit_service.py  auth_service.py  entitlements_grants.py  entitlements_subscribers.py  extraction.py  forecast_service.py  health_service.py  pdf_ttl_purge.py  stripe_webhook_router.py  vertex_client.py
backend/tests/: _alembic.py  conftest.py  test_aggregation_opt_out.py  test_alembic_audits_round_trip.py  test_alembic_auth_round_trip.py  test_alembic_installer_quotes_audit_id_index_round_trip.py  test_alembic_tmy_cache_round_trip.py  test_alembic_user_entitlements_round_trip.py  test_alembic_user_entitlements_tier_check_round_trip.py  test_alembic_user_entitlements_user_id_uuid_fk_round_trip.py  test_alembic_users_aggregation_opt_out_round_trip.py  test_alembic_users_fk_audits_pii_vault_round_trip.py  test_api_audits_owner_scoped.py  test_app.py  test_auth_magic_link.py  test_body_size_middleware.py  test_degradation_properties.py  test_engine_battery_dispatch.py  test_engine_clipping.py  test_engine_dc_production.py  test_engine_degradation.py  test_engine_export_credit.py  test_engine_finance_nbt.py  test_engine_golden_legacy.py  test_engine_monte_carlo.py  test_engine_nbt_settlement.py  test_engine_pipeline.py  test_engine_seg_settlement.py  test_engine_smoke.py  test_engine_snow.py  test_engine_soiling.py  test_engine_step_registry.py  test_engine_tariff_billing.py  test_engine_temperature.py  test_engine_tornado.py  test_entitlements.py  test_era5_land_pvgis_sibling.py  test_era5_land_sibling.py  test_eventbus.py  test_extraction_heuristics.py  (+29 more)
backend/tests/fixtures/: README.md  legacy_solar_tracker_2025.json
backend/workers/: forecast_worker.py  queue.py  ttl_worker.py
design/solar-decisions/: README.md
design/solar-decisions/chats/: chat1.md  chat2.md
design/solar-decisions/project/: Landing.html  Sun mocks.html  app.jsx  auth.jsx  charts.jsx  hero-art.jsx  nav.jsx  screen-audit.jsx  screen-landing.jsx  screen-library.jsx  screen-notes.jsx  screen-pricing.jsx  screen-results.jsx  screen-wizard.jsx  sun-mocks.jsx  themes.jsx  tiers.jsx  ui.jsx  workshop-knobs.jsx
docs/: EDITORIAL.md  ENGINEERING.md  SECRETS.md
docs/adr/: 0001-pdf-retention-extract-and-delete.md  0002-aggregation-default-off.md  0003-llm-vendor-vertex-ai-gemini.md  0004-eo-insurance-deferred.md  0005-aggregation-default-on-no-ui.md  0006-engine-steps-wrap-pvlib.md  README.md  template.md
docs/reviews/: 2026-05-01-backend-review.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(marketing)/: layout.tsx  page.tsx
frontend/components/charts/: battery-dispatch.tsx  demo-data.ts  hero-chart.tsx  index.ts  monthly-bars.tsx  tornado-chart.tsx  types.ts  use-has-mounted.ts
frontend/components/icons/: README.md  index.tsx
frontend/components/landing/: hero-panel.tsx  hero.tsx  index.ts  math-row.tsx  metric-row.tsx  mode-card.tsx  modes-strip.tsx
frontend/components/layout/: footer.tsx  (+4 more)
frontend/lib/: env.ts  format.ts  pricing.ts  theme.md  tone.ts
frontend/tests/: a11y.spec.ts
scripts/: check-contrast.js  check-i18n.sh
tests/integration/: README.md  _env.py
(+90 files in other folders)
