[project]
name = "chart-solar-backend"
version = "0.0.0"
description = "Chart Solar — independent solar forecasting, audit, and tracking engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.46",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31",
    "alembic>=1.18",
    "redis>=7.4",
    "rq>=2.8",
    "pvlib>=0.15",
    "numpy>=2.4",
    "pandas>=3.0",
    "httpx>=0.28",
    "structlog>=25.5",
    "sentry-sdk[fastapi]>=2.45",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.15",
    "mypy>=1.20",
    "pre-commit>=4.4",
    "pip-licenses>=5.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends"]

[tool.ruff.lint.isort]
# Disambiguate from the local alembic/ migrations dir.
known-third-party = ["alembic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Session-scoped event loop so tests can share a single async DB engine
# without "Future attached to a different loop" failures from per-test loops
# closing connections opened on a sibling loop.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["backend/tests"]

[tool.coverage.run]
source = ["backend"]
# Tests aren't production code; counting them inflates the headline.
omit = ["backend/tests/*", "backend/__init__.py"]
branch = true

[tool.coverage.report]
# Pragma escape hatches and runtime-only branches that aren't worth a fixture.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
# Headline for the CI gate. Current measurement sits at ~92 %; lowering
# this gate is a deliberate trade-off, not a routine cleanup.
fail_under = 90
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
