[project]
name = "chart-solar-backend"
version = "0.0.0"
description = "Chart Solar — independent solar forecasting, audit, and tracking engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.46",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31",
    "alembic>=1.18",
    "redis>=7.4",
    "rq>=2.8",
    "pvlib>=0.15",
    "numpy>=2.4",
    "pandas>=3.0",
    "httpx>=0.28",
    "structlog>=25.5",
    "sentry-sdk[fastapi]>=2.45",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.15",
    "mypy>=1.20",
    "pre-commit>=4.4",
    "pip-licenses>=5.0",
    "pytest-cov>=7.1.0",
    "hypothesis>=6.140",
    "import-linter>=2.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends"]

[tool.ruff.lint.isort]
# Disambiguate from the local alembic/ migrations dir.
known-third-party = ["alembic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Session-scoped event loop so tests can share a single async DB engine
# without "Future attached to a different loop" failures from per-test loops
# closing connections opened on a sibling loop.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["backend/tests"]
# `slow` tests assert wall-clock budgets that don't survive coverage
# instrumentation (~2× slowdown). They're real perf claims about Fly
# small-machine runtime — not coverage-mode runtime — so the default
# pytest run skips them. Opt in for the perf gate via `pytest -m slow`.
addopts = "-m 'not slow'"
markers = [
    "slow: long-running tests (e.g. 500-path Monte Carlo budgets); opt in via `pytest -m slow`",
]

[tool.coverage.run]
source = ["backend"]
# Tests aren't production code; counting them inflates the headline.
omit = ["backend/tests/*", "backend/__init__.py"]
branch = true

[tool.coverage.report]
# Pragma escape hatches and runtime-only branches that aren't worth a fixture.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
# Headline for the CI gate. Current measurement sits at ~92 %; lowering
# this gate is a deliberate trade-off, not a routine cleanup.
fail_under = 90
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.importlinter]
# Hard backend-layout rules from docs/ENGINEERING.md § Backend layout:
# `engine/` and `domain/` are pure-function layers and must not reach
# into orchestration/IO layers. CI runs this so violating PRs fail.
root_packages = ["backend"]

[[tool.importlinter.contracts]]
# `engine.*` and `domain.*` are pure-math layers. They may not depend
# on the IO / orchestration layers — keeps the engine deterministic
# and re-runnable from a `(state) -> state` shell. Shared types
# (TmyData, TariffSchedule, …) live in `backend.domain.*`; the engine
# imports them from there, never from `backend.providers.*`.
name = "engine is pure"
type = "forbidden"
source_modules = ["backend.engine", "backend.domain"]
forbidden_modules = [
    "backend.api",
    "backend.workers",
    "backend.infra",
    "backend.db",
    "backend.providers",
]

[[tool.importlinter.contracts]]
# `api.*` shapes responses; long-running compute always goes through
# the queue via a service. Today there are two direct hops into the
# worker module that the API holds onto pending the `services/` layer
# landing — they're listed in `ignore_imports` with bead links so any
# *new* hop fails CI immediately.
name = "api never imports workers directly"
type = "forbidden"
source_modules = ["backend.api"]
forbidden_modules = ["backend.workers"]
ignore_imports = [
    # chart-solar-5itb — fold queue.enqueue_forecast behind
    # services.forecast_service.submit() once `services/` lands.
    "backend.api.forecast -> backend.workers.queue",
    # chart-solar-5itb — same refactor: health check should call a
    # services.health.queue_ok() probe rather than reach into rq.
    "backend.api.health -> backend.workers.queue",
]
